# casdog

./: .gitignore  Cargo.toml  README.md  _todos.md
.github/workflows/: ci-linux.yml  ci-macos.yml  ci-windows.yml  coverage.yml  release.yml
crates/casdog/: Cargo.toml  build.rs
crates/casdog/src/: config.rs  diesel_pool.rs  lib.rs  main.rs  routes.rs  schema.rs
crates/casdog/src/handlers/: adapter.rs  app_extra.rs  application.rs  auth.rs  cas.rs  casbin_cli.rs  cert.rs  cert_extra.rs  consent.rs  dashboard.rs  enforcer.rs  form.rs  group.rs  health.rs  impersonation.rs  invitation.rs  ldap.rs  login_compat.rs  messaging.rs  mfa.rs  mod.rs  model.rs  oidc.rs  order.rs  org_extra.rs  organization.rs  payment.rs  permission.rs  permission_extra.rs  plan.rs  policy.rs  pricing.rs  product.rs  provider.rs  provider_extra.rs  record.rs  resource.rs  role.rs  rule.rs  saml.rs  (+16 more)
crates/casdog/src/hoops/: auth.rs  authz.rs  auto_signin.rs  casbin.rs  mod.rs  record_filter.rs
crates/casdog/src/middleware/: auth.rs  authz.rs  auto_signin.rs  casbin.rs  mod.rs  record_filter.rs
crates/casdog/src/models/: application.rs  casbin_model.rs  cert.rs  consent.rs  form.rs  group.rs  invitation.rs  mod.rs  oidc.rs  order.rs  organization.rs  payment.rs  permission.rs  record.rs  resource.rs  role.rs  rule.rs  session.rs  site.rs  subscription.rs  syncer.rs  ticket.rs  token.rs  user.rs  verification.rs  webhook.rs
crates/casdog/src/services/: adapter_service.rs  app_service.rs  auth_service.rs  cas_service.rs  casbin_service.rs  cert_service.rs  check_service.rs  cli_downloader_service.rs  consent_service.rs  enforcer_service.rs  face_service.rs  form_service.rs  group_service.rs  id_token_service.rs  init_service.rs  invitation_service.rs  ldap_service.rs  mfa_service.rs  mod.rs  model_service.rs  order_service.rs  org_service.rs  password_service.rs  payment_flow_service.rs  payment_service.rs  permission_service.rs  plan_service.rs  pricing_service.rs  product_service.rs  provider_dispatch_service.rs  provider_service.rs  record_service.rs  resource_service.rs  role_service.rs  rule_service.rs  saml_service.rs  session_service.rs  site_service.rs  spnego_service.rs  subscription_service.rs  (+10 more)
crates/casdog/src/services/providers/: apple.rs  balance_payment.rs  bitbucket.rs  captcha_provider.rs  custom_http_notify.rs  dingtalk.rs  dingtalk_notify.rs  discord.rs  discord_notify.rs  dummy_payment.rs  email_extra.rs  email_provider.rs  facebook.rs  generic_oauth.rs  github.rs  gitlab.rs  google.rs  lark.rs  lark_notify.rs  linkedin.rs  local_storage.rs  microsoft.rs  mod.rs  notification_provider.rs  oauth_provider.rs  okta.rs  payment_provider.rs  paypal_payment.rs  s3_storage.rs  slack.rs  slack_notify.rs  sms_provider.rs  steam.rs  storage_provider.rs  stripe_payment.rs  teams_notify.rs  telegram.rs  telegram_notify.rs  twitter.rs  wechat.rs
crates/casdog/tests/: api_parity_tests.rs  saml_signing_tests.rs  spnego_tests.rs
crates/server/: Cargo.toml
crates/server/casbin/: model.conf
crates/server/config/: default.toml
crates/server/src/: error.rs  main.rs  routes.rs
crates/server/src/handlers/: adapter.rs  application.rs  auth.rs  cas.rs  cert.rs  dashboard.rs  group.rs  health.rs  ldap.rs  messaging.rs  mod.rs  oidc.rs  org_extra.rs  organization.rs  payment.rs  permission.rs  policy.rs  product.rs  provider.rs  provider_extra.rs  record.rs  role.rs  session.rs  subscription.rs  syncer.rs  transaction.rs  user_extra.rs  webhook.rs
crates/server/src/middleware/: auth.rs  mod.rs
crates/server/src/models/: application.rs  mod.rs  oidc.rs  organization.rs  plan.rs  pricing.rs  product.rs  provider.rs  token.rs  transaction.rs  user.rs  verification.rs
crates/server/src/services/: app_service.rs  auth_service.rs  casbin_service.rs  cert_service.rs  mod.rs  org_service.rs  pricing_service.rs  product_service.rs  provider_service.rs  record_service.rs  resource_service.rs  role_service.rs  saml_service.rs  session_service.rs  subscription_service.rs  syncer_executor.rs  token_service.rs  transaction_service.rs  user_service.rs  verification_service.rs
crates/server/src/services/providers/: captcha_provider.rs  generic_oauth.rs  github.rs  mod.rs  oauth_provider.rs  sms_provider.rs
migrations/: 001_initial.sql  002_additional_tables.sql  003_oauth_enhancements.sql  004_user_provider_links.sql  005_mfa.sql  006_webauthn.sql  007_casbin_advanced.sql  008_ecommerce.sql  009_expand_models.sql  010_token_enhancements.sql  011_logout_url.sql  012_rules_sites.sql  013_consent_records.sql  014_payment_checkout.sql
web/: Cargo.toml  Dioxus.toml  index.html  package-lock.json  vite.config.ts
web/src/: App.tsx  api.rs  i18n.rs  main.rs  main.tsx  resources.rs  style.rs
web/src/api/: client.ts
web/src/components/: captcha.rs  form_fields.rs  mod.rs  qr_code.rs  resource_form.rs
web/src/context/: AuthContext.tsx
web/src/layouts/: MainLayout.tsx
web/src/pages/: Applications.tsx  Dashboard.tsx  Login.tsx  Organizations.tsx  Permissions.tsx  Policies.tsx  Roles.tsx  Signup.tsx  Users.tsx  account.rs  authorize.rs  consent.rs  device_auth.rs  forgot_password.rs  login.rs  mod.rs  result.rs  signup.rs
