[workspace]
resolver = "2"
members = [
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Casdog Team"]
license = "MIT"

[workspace.dependencies]
# Web framework
salvo = { version = "0.88", features = ["oapi", "jwt-auth", "cors", "logging", "affix-state", "serve-static"] }

# Embed static files
rust-embed = "8"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid"] }

# Authentication & Security
jsonwebtoken = "9"
argon2 = "0.5"

# Casbin for authorization
casbin = "2"
sqlx-adapter = { version = "1", default-features = false, features = ["postgres", "runtime-tokio"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
config = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
rand = "0.8"
base64 = "0.22"

# URL encoding
urlencoding = "2"

# Testing
reqwest = { version = "0.12", features = ["json"] }
