[package]
name = "casdog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Casdog IAM/SSO server - Casdoor-compatible identity and access management"
readme = "../../README.md"
include = ["/src/**", "/build.rs", "/config/**", "/casbin/**", "/web-dist/**", "/README.md"]

[lib]
name = "casdog"
path = "src/lib.rs"

[[bin]]
name = "casdog"
path = "src/main.rs"

[dependencies]
salvo.workspace = true
rust-embed.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
casbin.workspace = true
sqlx-adapter.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
rand.workspace = true
base64.workspace = true
urlencoding.workspace = true
regex.workspace = true
hex.workspace = true

async-trait.workspace = true
rsa.workspace = true
p256.workspace = true
sha2.workspace = true
reqwest.workspace = true
lettre.workspace = true
totp-rs.workspace = true
webauthn-rs.workspace = true
webauthn-rs-proto.workspace = true
diesel.workspace = true
diesel-async.workspace = true
ldap3 = "0.11"
flate2 = "1"
tar = "0.4"
tempfile = "3"
which = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json.workspace = true
salvo = { workspace = true, features = ["test"] }
rsa.workspace = true
sha2.workspace = true
base64.workspace = true
