[package]
name = "casdog-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Casdog IAM/SSO server"

[[bin]]
name = "casdog"
path = "src/main.rs"

[dependencies]
salvo.workspace = true
rust-embed.workspace = true
sqlx.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
casbin.workspace = true
sqlx-adapter.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
tokio.workspace = true
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
once_cell.workspace = true
rand.workspace = true
base64.workspace = true
urlencoding.workspace = true

[dev-dependencies]
reqwest.workspace = true
